Fix spacing for multi-line unit name and keywords

--- a/hcunits/css/hcunits.css
+++ b/hcunits/css/hcunits.css
@@ -242,7 +242,7 @@ div.setName {
     font-family: arial black, sans-serif;
     font-size: 19px;
     font-style: italic;
-    line-height: .9em;
+    line-height: 1em;
 }
 
 #unitKeywords {
